--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 <div id="map"></div>
-
+<h1>Percentage of Population who Uses Internet</h1>
 <!--put your external script links here-->
 <script type="text/javascript" src="lib/leaflet/leaflet-src.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
