--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
 <h1>Percentage of Population who Uses Internet</h1>
 <div id="map"></div>
+<div id="panel"></div>
 <h3>Internet data from worldbank.org ; Map data from <a href = "https://www.openstreetmap.org/">OpenStreetMaps</a></h3>
 <!--put your external script links here-->
 <script type="text/javascript" src="lib/leaflet/leaflet-src.js"></script>
