adding year display

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <h1>Percentage of Population who Uses Internet</h1>
 <div id="map"></div>
 <div id="panel"></div>
+<div id="year-display">Selected Year: <span id="selected-year"></span></div>
 <h3>Internet data from worldbank.org ; Map data from <a href = "https://www.openstreetmap.org/">OpenStreetMaps</a></h3>
 <!--put your external script links here-->
 <script type="text/javascript" src="lib/leaflet/leaflet-src.js"></script>
