--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
 <h1>Percentage of Population who Uses Internet</h1>
 <div id="map"></div>
+<!--the panel for the legend-->
 <div id="panel"></div>
 <div id="year-display">Selected Year: <span id="selected-year"></span></div>
 <h3>Internet data from worldbank.org ; Map data from <a href = "https://www.openstreetmap.org/">OpenStreetMaps</a></h3>
